Fixed a css issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -133,8 +133,8 @@ header nav ul li a {
 
 .section-two {
 	width: 100%;
-	border-left: 5px solid #EEE;
-	border-right: 5px solid #EEE;
+	border-top: 5px solid #EEE;
+	border-bottom: 5px solid #EEE;
 }
 
 .section-three {
